# CDP1806e32

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  TODO.md  asm_to_hex.py  cdp1806e32.md  cdp1806e32_emulator.py  deploy_docs.sh  hex_loader.py  irq_emulator_hook.py  isa.html  monitor.hex  objects.inv  pyproject.toml  requirements.txt  searchindex.js  setup.py  usage.html
.github/workflows/: test.yml
_sources/: api_reference.rst.txt  index.rst.txt  isa.rst.txt
asm/: monitor_program.asm
docs/: conf.py  index.rst  isa.rst  usage.rst
docs/_build/: .buildinfo  .buildinfo.bak  api_reference.html  genindex.html  index.html  isa.html  py-modindex.html  search.html  searchindex.js
docs/_build/.doctrees/: api_reference.doctree  environment.pickle  index.doctree  isa.doctree  usage.doctree
docs/_build/_sources/: usage.rst.txt
emulator/: cdp1806e32_emulator.py  irq_emulator_hook.py
tests/: test_add_instruction.py  test_beq_bne.py  test_cmp_instruction.py  test_div_instruction.py  test_ld_st_instruction.py  test_ldi_instruction.py  test_mov_instruction.py  test_mul_instruction.py  test_trap_instruction.py
